# LearningToFly

./: .gitignore  LICENSE  README.md
Firmware/ardupilot/: module.mk
Firmware/ardupilot/ArduCopter/: AP_Arming.cpp.d  AP_Rally.cpp.d  AP_State.cpp.d  ArduCopter-v2.px4  ArduCopter.cpp  ArduCopter.cpp.d  Attitude.cpp.d  Copter.cpp.d  Copter.h  GCS_Mavlink.cpp.d  Log.cpp  Log.cpp.d  Parameters.cpp.d  UserCode.cpp.d  afs_copter.cpp.d  avoidance_adsb.cpp.d  baro_ground_effect.cpp.d  capabilities.cpp.d  commands.cpp.d  commands_logic.cpp.d  compassmot.cpp.d  compat.cpp.d  config.h  control_acro.cpp.d  control_althold.cpp.d  control_auto.cpp.d  control_autotune.cpp.d  (+46 more)
SimulationUI/: CMakeLists.txt
SimulationUI/projects/copter_simulation/: CMakeLists.txt  CopterMesh.cpp  CopterMesh.h  CopterSimulationCommon.h  HybridCopter.cpp  HybridCopter.h
SimulationUI/projects/copter_simulation/Aerodynamics/: AerodynamicsDatabase.cpp  AerodynamicsDatabase.h
SimulationUI/projects/copter_simulation/Controller/: HighLevelController.h
SimulationUI/projects/copter_simulation/Controller/NN/: NNController.cpp  NNController.h
SimulationUI/projects/copter_simulation/Controller/NN/QuadPlane/: NNModelParameters.h
SimulationUI/projects/copter_simulation/Controller/NN/TailSitter/: NNModelParameters.h
SimulationUI/projects/copter_simulation/Controller/PID/: PID.cpp  PID.h  PIDAltHoldController.cpp  PIDAltHoldController.h  PIDAttitudeController.cpp  PIDAttitudeController.h  PIDAttitudeRateController.cpp  PIDAttitudeRateController.h  PIDPositionController.cpp  PIDPositionController.h  PIDQuadPlaneController.cpp  PIDQuadPlaneController.h
SimulationUI/projects/copter_simulation/RigidBody/: RigidBody.cpp  RigidBody.h
SimulationUI/projects/copter_simulation/Rotor/: Rotor.cpp  Rotor.h
SimulationUI/projects/copter_simulation/Sensor/: InertialSensor.cpp  InertialSensor.h
SimulationUI/projects/copter_utils/: CMakeLists.txt  CopterUtils.cpp  CopterUtils.h  Log.cpp  Log.h  Mesh.h  RandomGenerator.cpp  RandomGenerator.h
SimulationUI/projects/design_viewer/: ArrowAnimator.cpp  ArrowAnimator.h  CMakeLists.txt  CopterAnimator.cpp  CopterAnimator.h  CopterRotorAnimator.cpp  CopterRotorAnimator.h  DesignImguiWrapper.cpp  DesignImguiWrapper.h  DesignViewer.cpp  DesignViewer.h  DesignViewerCamera.cpp  DesignViewerCamera.h  DesignViewerCommon.h  DesignViewerKeyboardHandler.cpp  DesignViewerKeyboardHandler.h  DesignViewerTimer.cpp  DesignViewerTimer.h  LightAnimator.cpp  LightAnimator.h  main.cpp
Training/code/: hybrid3D_env.py  rotor.py  run.py  save.py  wing.py
Training/data/: QuadPlane.xml  TailSitter.xml  quadrotor_render.xml
(+352 files in other folders)
